--- a/MGSPreferencesTextEditing.xib
+++ b/MGSPreferencesTextEditing.xib
@@ -53,6 +53,7 @@
 						<int key="NSvFlags">18</int>
 						<string key="NSFrame">{{13, 10}, {574, 314}}</string>
 						<reference key="NSSuperview" ref="704015996"/>
+						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="111009061"/>
 						<string key="NSReuseIdentifierKey">_NS:9</string>
 						<object class="NSMutableArray" key="NSTabViewItems">
@@ -69,6 +70,7 @@
 											<int key="NSvFlags">256</int>
 											<string key="NSFrame">{{113, 250}, {52, 17}}</string>
 											<reference key="NSSuperview" ref="111009061"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="337129580"/>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSTextFieldCell" key="NSCell" id="325693385">
@@ -107,6 +109,7 @@
 											<int key="NSvFlags">256</int>
 											<string key="NSFrame">{{62, 106}, {103, 17}}</string>
 											<reference key="NSSuperview" ref="111009061"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="165620963"/>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSTextFieldCell" key="NSCell" id="461474893">
@@ -125,6 +128,7 @@
 											<int key="NSvFlags">256</int>
 											<string key="NSFrame">{{169, 227}, {169, 18}}</string>
 											<reference key="NSSuperview" ref="111009061"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="389783377"/>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSButtonCell" key="NSCell" id="61626788">
@@ -154,6 +158,7 @@
 											<int key="NSvFlags">256</int>
 											<string key="NSFrame">{{496, 92}, {41, 11}}</string>
 											<reference key="NSSuperview" ref="111009061"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="712500256"/>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSTextFieldCell" key="NSCell" id="428181698">
@@ -176,6 +181,7 @@
 											<int key="NSvFlags">256</int>
 											<string key="NSFrame">{{495, 104}, {43, 19}}</string>
 											<reference key="NSSuperview" ref="111009061"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="775106868"/>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSTextFieldCell" key="NSCell" id="63514857">
@@ -293,6 +299,7 @@
 											<int key="NSvFlags">256</int>
 											<string key="NSFrame">{{169, 79}, {170, 18}}</string>
 											<reference key="NSSuperview" ref="111009061"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="948425585"/>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSButtonCell" key="NSCell" id="93770986">
@@ -317,6 +324,7 @@
 											<int key="NSvFlags">256</int>
 											<string key="NSFrame">{{169, 105}, {320, 18}}</string>
 											<reference key="NSSuperview" ref="111009061"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="242170480"/>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSButtonCell" key="NSCell" id="779346619">
@@ -339,8 +347,9 @@
 										<object class="NSTextField" id="1032154141">
 											<reference key="NSNextResponder" ref="111009061"/>
 											<int key="NSvFlags">256</int>
-											<string key="NSFrame">{{461, 186}, {38, 17}}</string>
+											<string key="NSFrame">{{466, 186}, {38, 17}}</string>
 											<reference key="NSSuperview" ref="111009061"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="939964361"/>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSTextFieldCell" key="NSCell" id="928487462">
@@ -359,6 +368,7 @@
 											<int key="NSvFlags">256</int>
 											<string key="NSFrame">{{169, 249}, {181, 18}}</string>
 											<reference key="NSSuperview" ref="111009061"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="482494828"/>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSButtonCell" key="NSCell" id="119398811">
@@ -382,6 +392,7 @@
 											<int key="NSvFlags">256</int>
 											<string key="NSFrame">{{169, 163}, {164, 18}}</string>
 											<reference key="NSSuperview" ref="111009061"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="3434737"/>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSButtonCell" key="NSCell" id="659128503">
@@ -403,8 +414,9 @@
 										<object class="NSTextField" id="811493167">
 											<reference key="NSNextResponder" ref="111009061"/>
 											<int key="NSvFlags">256</int>
-											<string key="NSFrame">{{466, 204}, {26, 19}}</string>
+											<string key="NSFrame">{{471, 204}, {26, 19}}</string>
 											<reference key="NSSuperview" ref="111009061"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="610392587"/>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSTextFieldCell" key="NSCell" id="115724116">
@@ -498,14 +510,15 @@
 										<object class="NSButton" id="389783377">
 											<reference key="NSNextResponder" ref="111009061"/>
 											<int key="NSvFlags">256</int>
-											<string key="NSFrame">{{169, 205}, {291, 18}}</string>
+											<string key="NSFrame">{{169, 205}, {298, 18}}</string>
 											<reference key="NSSuperview" ref="111009061"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="811493167"/>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSButtonCell" key="NSCell" id="589435932">
 												<int key="NSCellFlags">67108864</int>
 												<int key="NSCellFlags2">0</int>
-												<string key="NSContents">Show line number gutter, width (in pixels):</string>
+												<string key="NSContents">Show line numbers, gutter width (in pixels):</string>
 												<reference key="NSSupport" ref="899889745"/>
 												<reference key="NSControlView" ref="389783377"/>
 												<int key="NSButtonFlags">1211912448</int>
@@ -523,6 +536,7 @@
 											<int key="NSvFlags">256</int>
 											<string key="NSFrame">{{169, 184}, {219, 18}}</string>
 											<reference key="NSSuperview" ref="111009061"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="1032154141"/>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSButtonCell" key="NSCell" id="536860156">
@@ -546,7 +560,8 @@
 											<int key="NSvFlags">256</int>
 											<string key="NSFrame">{{169, 39}, {164, 18}}</string>
 											<reference key="NSSuperview" ref="111009061"/>
-											<reference key="NSNextKeyView" ref="181254614"/>
+											<reference key="NSWindow"/>
+											<reference key="NSNextKeyView"/>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSButtonCell" key="NSCell" id="255897437">
 												<int key="NSCellFlags">67108864</int>
@@ -569,6 +584,7 @@
 											<int key="NSvFlags">256</int>
 											<string key="NSFrame">{{169, 59}, {164, 18}}</string>
 											<reference key="NSSuperview" ref="111009061"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="617969676"/>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSButtonCell" key="NSCell" id="727541076">
@@ -592,6 +608,7 @@
 											<int key="NSvFlags">256</int>
 											<string key="NSFrame">{{376, 139}, {36, 22}}</string>
 											<reference key="NSSuperview" ref="111009061"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="1048114000"/>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSTextFieldCell" key="NSCell" id="96436684">
@@ -686,6 +703,7 @@
 											<int key="NSvFlags">256</int>
 											<string key="NSFrame">{{169, 142}, {201, 18}}</string>
 											<reference key="NSSuperview" ref="111009061"/>
+											<reference key="NSWindow"/>
 											<reference key="NSNextKeyView" ref="824649179"/>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSButtonCell" key="NSCell" id="860369003">
@@ -707,6 +725,7 @@
 									</object>
 									<string key="NSFrame">{{10, 33}, {554, 268}}</string>
 									<reference key="NSSuperview" ref="181254614"/>
+									<reference key="NSWindow"/>
 									<reference key="NSNextKeyView" ref="1041599624"/>
 									<string key="NSReuseIdentifierKey">_NS:11</string>
 								</object>
@@ -749,6 +768,7 @@
 											<int key="NSvFlags">256</int>
 											<string key="NSFrame">{{174, 92}, {178, 18}}</string>
 											<reference key="NSSuperview" ref="143595230"/>
+											<reference key="NSNextKeyView" ref="181254614"/>
 											<bool key="NSEnabled">YES</bool>
 											<object class="NSButtonCell" key="NSCell" id="847040069">
 												<int key="NSCellFlags">67108864</int>
@@ -1096,6 +1116,7 @@
 				</object>
 				<string key="NSFrameSize">{600, 338}</string>
 				<reference key="NSSuperview"/>
+				<reference key="NSWindow"/>
 				<object class="NSMutableString" key="NSClassName">
 					<characters key="NS.bytes">NSView</characters>
 				</object>
@@ -2193,7 +2214,30 @@
 			<nil key="sourceID"/>
 			<int key="maxID">255</int>
 		</object>
-		<object class="IBClassDescriber" key="IBDocument.Classes"/>
+		<object class="IBClassDescriber" key="IBDocument.Classes">
+			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
+				<bool key="EncodedWithXMLCoder">YES</bool>
+				<object class="IBPartialClassDescription">
+					<string key="className">MGSFragariaTextEditingPrefsViewController</string>
+					<string key="superclassName">NSViewController</string>
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">changeGutterWidth:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">changeGutterWidth:</string>
+						<object class="IBActionInfo" key="NS.object.0">
+							<string key="name">changeGutterWidth:</string>
+							<string key="candidateClassName">id</string>
+						</object>
+					</object>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">./Classes/MGSFragariaTextEditingPrefsViewController.h</string>
+					</object>
+				</object>
+			</object>
+		</object>
 		<int key="IBDocument.localizationMode">0</int>
 		<string key="IBDocument.TargetRuntimeIdentifier">IBCocoaFramework</string>
 		<object class="NSMutableDictionary" key="IBDocument.PluginDeclaredDependencies">
